[package]
name = "claym"
description = "Assertion macros (without dependencies)"
version = "0.2.0"
authors = ["Mattia Penati <mp@hypermynds.com>"]
license = "Apache-2.0 OR MIT"
categories = ["development-tools", "development-tools::testing", "no-std"]
keywords = ["assert", "test", "testing"]
edition = "2021"
rust-version = "1.56"
