[package]
name = "claym"
description = "Assertion macros (without dependencies)"
version = "0.2.0"
authors = ["Mattia Penati <mp@hypermynds.com>"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
categories = ["development-tools", "development-tools::testing", "no-std"]
keywords = ["assert", "test", "testing"]
homepage = "https://github.com/hypermynds/claym"
repository = "https://github.com/hypermynds/claym"
documentation = "https://docs.rs/claym"
edition = "2021"
rust-version = "1.56"
